[package]
name = "lru-k"
version = "0.0.1"
edition = "2024"
authors = ["Victor Farazdagi <farazdagi@gmail.com>"]
description = "A fixed-size thread-safe LRU-k cache"
homepage = "https://github.com/farazdagi/lru-k"
repository = "https://github.com/farazdagi/lru-k"
documentation = "https://docs.rs/lru-k"
readme = "README.md"
license = "MIT"
keywords = ["LRU", "cache"]
categories = ["caching", "no-std", "data-structures"]

[dependencies]

[dev-dependencies]
lru = "0.16"
pretty_assertions = "1"
rand = "0.9"

[workspace.lints.clippy]
redundant_test_prefix = "deny"

[lints]
workspace = true
